--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>PQT</title>
   </head>
   <body>
-    <h1>Đi uống nước lê đê!!!!!!!!!!</h1>
+    <h1>Tiệp đẹp trai</h1>
     <br />
     <hr />
   </body>
